--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     </footer>
   </div>
 
-  <!-- <script src="./js/vendor.min.js"></script> -->
+  <script src="./js/vendor.min.js"></script>
   <script src="./js/main.min.js"></script>
 </body>
 
