--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
     </footer>
   </div>
 
-  <script src="./js/vendor.min.js" async></script>
-  <script src="./js/main.min.js" async></script>
+  <script src="./js/vendor.min.js"></script>
+  <script src="./js/main.min.js"></script>
 </body>
 
 </html>
