--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      <div class="container">
+      <div class="container header__overlay">
         <nav class="header__nav nav">
-          <input class="header__checkbox visually-hidden" type="checkbox" id="checkbox"
-            aria-label="Открыть меню.">
+          <input class="header__checkbox visually-hidden" type="checkbox" id="checkbox" aria-label="Открыть меню.">
           <label class="header__label no-js" for="checkbox"></label>
           <a class="header__logo">
             <svg class="header__logo-img" width="70" height="38">
@@ -48,14 +47,14 @@
           </ul>
         </nav>
       </div>
-    </header>
-    <main>
       <section class="intro">
         <div class="container">
           <h1>Круизы в&nbsp;Антарктику</h1>
           <p>Волшебный мир айсбергов и пингвинов</p>
         </div>
       </section>
+    </header>
+    <main>
       <section class="description">
         <div class="container">
           <div class="description__content">
@@ -113,140 +112,156 @@
           <h2>Ближайшие круизы</h2>
           <ul class="catalog__list">
             <li class="catalog__item">
+              <div class="catalog__content">
+                <p>Маршрут</p>
+                <span>Аргентина - Фолклендские острова - Антарктида</span>
+                <p>Порт отправления</p>
+                <span>Ушуайя</span>
+                <p>Продолжительность </p>
+                <span>11 дней</span>
+                <p>Цена </p>
+                <span>от 11500 $</span>
+              </div>
+              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
               <picture>
                 <source type="image/webp" srcset="./img/cards/card-1.webp 1x, ./img/cards/card-1@2x.webp 2x">
                 <img src="./img/cards/card-1.jpg" srcset="./img/cards/card-1@2x.jpg 2x" width="260" height="386" alt=""
                   loading="lazy" class="catalog__image catalog__image--ast">
               </picture>
               <h3>Круиз “Астория”</h3>
-              <p>Маршрут</p>
-              <span>Аргентина - Фолклендские острова - Антарктида</span>
-              <p>Порт отправления</p>
-              <span>Ушуайя</span>
-              <p>Продолжительность </p>
-              <span>11 дней</span>
-              <p>Цена </p>
-              <span>от 11500 $</span>
-              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
             </li>
             <li class="catalog__item">
+              <div class="catalog__content">
+                <p>Маршрут</p>
+                <span>Аргентина - Фолклендские острова - Антарктида - Чили</span>
+                <p>Порт отправления</p>
+                <span>Буэнос-Айрес</span>
+                <p>Продолжительность </p>
+                <span>20 дней</span>
+                <p>Цена </p>
+                <span>от 14500 $</span>
+              </div>
+              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
               <picture>
                 <source type="image/webp" srcset="./img/cards/card-2.webp 1x, ./img/cards/card-2@2x.webp 2x">
                 <img src="./img/cards/card-2.jpg" srcset="./img/cards/card-2@2x.jpg 2x" width="260" height="386" alt=""
                   loading="lazy" class="catalog__image">
               </picture>
               <h3>Круиз “Элайн”</h3>
-              <p>Маршрут</p>
-              <span>Аргентина - Фолклендские острова - Антарктида - Чили</span>
-              <p>Порт отправления</p>
-              <span>Буэнос-Айрес</span>
-              <p>Продолжительность </p>
-              <span>20 дней</span>
-              <p>Цена </p>
-              <span>от 14500 $</span>
-              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
             </li>
             <li class="catalog__item">
+              <div class="catalog__content">
+                <p>Маршрут</p>
+                <span>Аргентина - Южная Георгия и Южные Сандвичевы Острова - Антарктида</span>
+                <p>Порт отправления</p>
+                <span>Ушуайя</span>
+                <p>Продолжительность </p>
+                <span>15 дней</span>
+                <p>Цена </p>
+                <span>от 14500 $</span>
+              </div>
+              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
               <picture>
                 <source type="image/webp" srcset="./img/cards/card-3.webp 1x, ./img/cards/card-3@2x.webp 2x">
                 <img src="./img/cards/card-3.jpg" srcset="./img/cards/card-3@2x.jpg 2x" width="260" height="386" alt=""
                   loading="lazy" class="catalog__image catalog__image--atl">
               </picture>
               <h3>Круиз “Атлантис”</h3>
-              <p>Маршрут</p>
-              <span>Аргентина - Южная Георгия и Южные Сандвичевы Острова - Антарктида</span>
-              <p>Порт отправления</p>
-              <span>Ушуайя</span>
-              <p>Продолжительность </p>
-              <span>15 дней</span>
-              <p>Цена </p>
-              <span>от 14500 $</span>
-              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
             </li>
             <li class="catalog__item">
+              <div class="catalog__content">
+                <p>Маршрут</p>
+                <span>Аргентина - Фолклендские острова - Антарктида</span>
+                <p>Порт отправления</p>
+                <span>Ушуайя</span>
+                <p>Продолжительность </p>
+                <span>11 дней</span>
+                <p>Цена </p>
+                <span>от 11500 $</span>
+              </div>
+              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
               <picture>
                 <source type="image/webp" srcset="./img/cards/card-4.webp 1x, ./img/cards/card-4@2x.webp 2x">
                 <img src="./img/cards/card-4.jpg" srcset="./img/cards/card-4@2x.jpg 2x" width="260" height="386" alt=""
                   loading="lazy" class="catalog__image catalog__image--odi">
               </picture>
               <h3>Круиз “Одиссей”</h3>
-              <p>Маршрут</p>
-              <span>Аргентина - Фолклендские острова - Антарктида</span>
-              <p>Порт отправления</p>
-              <span>Ушуайя</span>
-              <p>Продолжительность </p>
-              <span>11 дней</span>
-              <p>Цена </p>
-              <span>от 11500 $</span>
-              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
             </li>
             <li class="catalog__item">
+              <div class="catalog__content">
+                <p>Маршрут</p>
+                <span>Чили - Антарктида</span>
+                <p>Порт отправления</p>
+                <span>Пунта-Аренас</span>
+                <p>Продолжительность </p>
+                <span>13 дней</span>
+                <p>Цена </p>
+                <span>от 9700 $</span>
+              </div>
+              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
               <picture>
                 <source type="image/webp" srcset="./img/cards/card-5.webp 1x, ./img/cards/card-5@2x.webp 2x">
                 <img src="./img/cards/card-5.jpg" srcset="./img/cards/card-5@2x.jpg 2x" width="260" height="386" alt=""
                   loading="lazy" class="catalog__image catalog__image--oli">
               </picture>
               <h3>Круиз “Олимпия”</h3>
-              <p>Маршрут</p>
-              <span>Чили - Антарктида</span>
-              <p>Порт отправления</p>
-              <span>Пунта-Аренас</span>
-              <p>Продолжительность </p>
-              <span>13 дней</span>
-              <p>Цена </p>
-              <span>от 9700 $</span>
-              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
             </li>
             <li class="catalog__item">
+              <div class="catalog__content">
+                <p>Маршрут</p>
+                <span>Аргентина - Антарктида - Чили</span>
+                <p>Порт отправления</p>
+                <span>Ушуайя</span>
+                <p>Продолжительность </p>
+                <span>14 дней</span>
+                <p>Цена </p>
+                <span>от 11700 $</span>
+              </div>
+              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
               <picture>
                 <source type="image/webp" srcset="./img/cards/card-6.webp 1x, ./img/cards/card-6@2x.webp 2x">
                 <img src="./img/cards/card-6.jpg" srcset="./img/cards/card-6@2x.jpg 2x" width="260" height="386" alt=""
                   loading="lazy" class="catalog__image catalog__image--avr">
               </picture>
               <h3>Круиз “Аврора”</h3>
-              <p>Маршрут</p>
-              <span>Аргентина - Антарктида - Чили</span>
-              <p>Порт отправления</p>
-              <span>Ушуайя</span>
-              <p>Продолжительность </p>
-              <span>14 дней</span>
-              <p>Цена </p>
-              <span>от 11700 $</span>
-              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
             </li>
             <li class="catalog__item">
+              <div class="catalog__content">
+                <p>Маршрут</p>
+                <span>Чили - Южная Георгия - Антарктида - Аргентина</span>
+                <p>Порт отправления</p>
+                <span>Пунта-Аренас</span>
+                <p>Продолжительность </p>
+                <span>17 дней</span>
+                <p>Цена </p>
+                <span>от 12300 $</span>
+              </div>
+              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
               <picture>
                 <source type="image/webp" srcset="./img/cards/card-7.webp 1x, ./img/cards/card-7@2x.webp 2x">
                 <img src="./img/cards/card-7.jpg" srcset="./img/cards/card-7@2x.jpg 2x" width="260" height="386" alt=""
                   loading="lazy" class="catalog__image catalog__image--leo">
               </picture>
               <h3>Круиз “Леонор”</h3>
-              <p>Маршрут</p>
-              <span>Чили - Южная Георгия - Антарктида - Аргентина</span>
-              <p>Порт отправления</p>
-              <span>Пунта-Аренас</span>
-              <p>Продолжительность </p>
-              <span>17 дней</span>
-              <p>Цена </p>
-              <span>от 12300 $</span>
-              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
             </li>
             <li class="catalog__item">
+              <div class="catalog__content">
+                <p>Маршрут</p>
+                <span>Аргентина - Антарктида</span>
+                <p>Порт отправления</p>
+                <span>Ушуайя</span>
+                <p>Продолжительность </p>
+                <span>11 дней</span>
+                <p>Цена </p>
+                <span>от 12300 $</span>
+              </div>
+              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
               <picture>
                 <source type="image/webp" srcset="./img/cards/card-8.webp 1x, ./img/cards/card-8@2x.webp 2x">
                 <img src="./img/cards/card-8.jpg" srcset="./img/cards/card-8@2x.jpg 2x" width="260" height="386" alt=""
                   loading="lazy" class="catalog__image catalog__image--min">
               </picture>
               <h3>Круиз “Минион&nbsp;-&nbsp;1”</h3>
-              <p>Маршрут</p>
-              <span>Аргентина - Антарктида</span>
-              <p>Порт отправления</p>
-              <span>Ушуайя</span>
-              <p>Продолжительность </p>
-              <span>11 дней</span>
-              <p>Цена </p>
-              <span>от 12300 $</span>
-              <a class="catalog__btn btn" href="#no_scroll">Забронировать</a>
             </li>
           </ul>
         </div>
